name:                Tedit
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/evan-a-w/Tedit#readme
license:             BSD3
license-file:        LICENSE
author:              Evan Williams
maintainer:          evanawilliams@live.com
copyright:           2021 Evan Williams
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Tedit
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded
  default-language:    Haskell2010
  other-modules:       Text
  build-depends:       base >= 4.7 && < 5
                     , fingertree
                     , unbeliever
                     , core-text
                     , brick >= 0.61
                     , containers
                     , linear
                     , microlens
                     , microlens-th
                     , random
                     , vty
                     , directory
